# daylog

./: README.md
backend/: pyproject.toml
backend/backend/: api.py  main.py  schemas.py  services.py
frontend/: angular.json  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/: styles.css  styles.scss  types.ts
frontend/src/app/: app.component.css  app.component.html  app.component.scss  app.component.ts  app.config.ts  app.routes.ts  task-log.service.ts  task.ts
frontend/src/app/reducers/: index.ts
frontend/src/app/shared/: models.ts
frontend/src/app/task-input/: task-input.component.css  task-input.component.html  task-input.component.ts
frontend/src/app/task-log/: task-log-api.service.spec.ts  task-log-api.service.ts  task-log.models.ts  task-log.module.ts  task-log.service.ts
frontend/src/app/task-log/components/task-input/: task-input.component.html  task-input.component.scss  task-input.component.ts
frontend/src/app/task-log/components/task-input-dialog/: dialog-task-input-dialog.component.html  task-input-dialog.component.spec.ts  task-input-dialog.component.ts
frontend/src/app/task-log/services/: task-log-api.service.spec.ts  task-log-api.service.ts  task-log.service.ts
frontend/src/app/task-log/store/: index.ts  task-log.actions.ts  task-log.effects.ts  task-log.reducer.ts  task-log.reduder.ts  task-log.selectors.ts
frontend/src/app/task-log/task-list/: task-list.component.ts
frontend/src/app/workbench/: workbench.component.css  workbench.component.html  workbench.component.ts
(+9 files in other folders)
