[tool.poetry]
name = "backend"
version = "0.1.0"
description = "REST API for Daylog"
authors = ["ikrzywda <krzywdaigor890@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"


[tool.poetry.scripts]
serve = "backend.main:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
